# CPlot

./: .gitignore  .gitmodules  CMakeLists.txt  CPackConfig.cmake  LICENSE.txt  build.sh  cplot-installer.nsi  main.cpp
.github/workflows/: cmake-multi-platform.yml
assets/: icon.rc
cmake/: CPackConfig.cmake
emcc-build/: CMakeCache.txt  Makefile  cmake_install.cmake
src/: CMakeLists.txt  CPlotApp.cpp  CPlotApp.h  ComplexPlot.cpp  ComplexPlot.h  Flags.cpp  Flags.h  Pixel.cpp  Pixel.h
submodules/: CMakeLists.txt
